CB-32813 Add latest database engine version to platform database capabilities. Introduce getLatestDatabaseEngineVersion across all cloud providers (AWS, Azure, GCP) to expose the highest available PostgreSQL version. Add VERSION_18 to MajorVersion enum and update the upper bound check in AwsRdsVersionOperations accordingly